[#] Fixed validation errors wordwrap

--- a/public/css/merchants/app.css
+++ b/public/css/merchants/app.css
@@ -1,4 +1,5 @@
-.form-content, .form-content-half, .contact-form-content-wr{
+.position-relative
+{
     position: relative;
 }
 
@@ -7,4 +8,5 @@
     top: 100%;
     left: 0;
     font-family: sans-serif;
+    width: max-content;
 }
